# PLNTree-package

./: .gitignore  README.md  pyproject.toml
plntree/data/cMD/: loader.py  metadata.csv
plntree/data/cMD/studies/: AsnicarF_2021_species_abundance.csv  BackhedF_2015_species_abundance.csv  BritoIL_2016_species_abundance.csv  BrooksB_2017_species_abundance.csv  CosteaPI_2017_species_abundance.csv  FengQ_2015_species_abundance.csv  FerrettiP_2018_species_abundance.csv  HMP_2012_species_abundance.csv  HMP_2019_ibdmdb_species_abundance.csv  HMP_2019_t2d_species_abundance.csv  HallAB_2017_species_abundance.csv  HansenLBS_2018_species_abundance.csv  IaniroG_2022_species_abundance.csv  JieZ_2017_species_abundance.csv  KarlssonFH_2013_species_abundance.csv  LeChatelierE_2013_species_abundance.csv  LeeKA_2022_species_abundance.csv  LiJ_2014_species_abundance.csv  LiJ_2017_species_abundance.csv  LifeLinesDeep_2016_species_abundance.csv  LiuW_2016_species_abundance.csv  MehtaRS_2018_species_abundance.csv  MetaCardis_2020_a_species_abundance.csv  NielsenHB_2014_species_abundance.csv  OhJ_2014_species_abundance.csv  PasolliE_2019_species_abundance.csv  PehrssonE_2016_species_abundance.csv  QinJ_2012_species_abundance.csv  QinN_2014_species_abundance.csv  RubelMA_2020_species_abundance.csv  SchirmerM_2016_species_abundance.csv  ShaoY_2019_species_abundance.csv  VatanenT_2016_species_abundance.csv  VilaAV_2018_species_abundance.csv  VincentC_2016_species_abundance.csv  XieH_2016_species_abundance.csv  (+8 more)
plntree/models/: plntree.py
taxapln/: README.md  experiments_utils.py
taxapln/cache/: README.md
